--- a/index.html
+++ b/index.html
@@ -91,7 +91,11 @@
                         <input type="text" class="w-16 text-center border-none" value="1" readonly>
                         <button class="quantity-btn plus w-8 h-8 flex items-center justify-center border !rounded-button">+</button>
                     </div>
-                    <button class="w-full bg-primary text-white py-3 !rounded-button hover:opacity-90 transition-opacity">Add to Cart</button>
+                    <a href="https://wa.me/+916238998062?text='I like to buy Nirvana 100ml bottle'">
+                        <button class="w-full bg-primary text-white py-3 !rounded-button hover:opacity-90 transition-opacity">
+                            Buy now
+                        </button>
+                    </a>
                 </div>
 
                 <div class="product-card bg-white p-8 rounded-lg shadow-lg text-center relative">
@@ -107,7 +111,11 @@
                         <input type="text" class="w-16 text-center border-none" value="1" readonly>
                         <button class="quantity-btn plus w-8 h-8 flex items-center justify-center border !rounded-button">+</button>
                     </div>
-                    <button class="w-full bg-primary text-white py-3 !rounded-button hover:opacity-90 transition-opacity">Add to Cart</button>
+                    <a href="https://wa.me/+916238998062?text='I like to buy Nirvana 200ml bottle'">
+                    <button class="w-full bg-primary text-white py-3 !rounded-button hover:opacity-90 transition-opacity">
+                        Buy now
+                    </button>
+                    </a>
                 </div>
 
                 <div class="product-card bg-white p-8 rounded-lg shadow-lg text-center">
@@ -119,10 +127,14 @@
                     <p class="text-2xl font-bold text-primary mb-4">₹600 </p>
                     <div class="flex items-center justify-center gap-4 mb-4">
                         <button class="quantity-btn minus w-8 h-8 flex items-center justify-center border !rounded-button">-</button>
-                        <input type="text" class="w-16 text-center border-none" value="1" readonly>
+                        <input type="text" class="w-16 text-center border-none" value="1" readonly id="quantity500ml">
                         <button class="quantity-btn plus w-8 h-8 flex items-center justify-center border !rounded-button">+</button>
                     </div>
-                    <button class="w-full bg-primary text-white py-3 !rounded-button hover:opacity-90 transition-opacity">Add to Cart</button>
+                    <a href="https://wa.me/+916238998062?text='I like to buy Nirvana 500ml bottle'">
+                    <button class="w-full bg-primary text-white py-3 !rounded-button hover:opacity-90 transition-opacity">
+                        Buy now
+                    </button>
+                    </a>
                 </div>
             </div>
         </div>
